HelloUltraviolet/Fixtures/RejectedSource/Statements/FrameTargetNotActive/Source/Main.uv
//! Rejected statement specimen for explicit frame target that is not active.

public procedure frameTargetNotActiveReference() -> () {
    let scratch: i32 = 0
    scratch.frame {
    }
}
